# Job-App

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  API_TEST_REPORT.md  CMakeLists.txt  CODE_REVIEW.md  COMPLETION_SUMMARY.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  REWORK_SUMMARY.md  TODO.md  docker-compose.yml  setup.sh  test_profile_scroll.html  test_scroll.html  test_scroll_verify.html  update.sh  update_dev.sh
config/: config.json  config_v2.json  enrich_prompt.txt  system_prompt.txt  user_profile.md  user_profile_template.md
data/: jobs_v2.db-shm  jobs_v2.db-wal
frontend/: README.md  index.html  job-dashboard-v12.html  job_dashboard.html  onboarding.html  profile.html
frontend/css/: base.css  variables.css
frontend/css/components/: action-bar.css  console.css  detail-panel.css  header.css  modal.css  sidebar.css  utilities.css
frontend/css/features/: fit-assessment.css  fit-verdict.css  red-flags.css  work-split.css
frontend/css/layouts/: main.css
frontend/js/: README.md  api.js  main.js  state.js
frontend/js/components/: actions.js  console.js  detail.js  header.js  job-list.js  modal.js
frontend/js/utils/: formatting.js  validation.js
include/: db.h
src/: db.cpp  main.cpp
